--- a/pom.xml
+++ b/pom.xml
@@ -53,12 +53,12 @@
 						<name>
 							verticleio/${project.artifactId}:${project.version}
 						</name>
-						<publish>false</publish>
+						<publish>true</publish>
 					</image>
 					<docker>
 						<publishRegistry>
-							<username>${registry_user}</username>
-							<password>${registry_secret}</password>
+							<username>${DOCKER_REGISTRY_USER}</username>
+							<password>${DOCKER_REGISTRY_SECRET}</password>
 							<url>${registry_url}</url>
 						</publishRegistry>
 					</docker>
