--- a/charts/verticle-gateway-operator/templates/clusterrole.yaml
+++ b/charts/verticle-gateway-operator/templates/clusterrole.yaml
@@ -6,7 +6,7 @@ metadata:
     {{- include "verticle-gateway-operator.labels" . | nindent 4 }}
 rules:
 - apiGroups: [""]
-  resources: ["pods", "deployments", "services"]
+  resources: ["pods", "deployments", "services", "serviceaccounts"]
   verbs: ["get", "watch", "list", "update", "delete", "create"]
 
 - apiGroups: ["apiextensions.k8s.io"]
